plugins {
    id 'org.springframework.boot' version '2.5.2'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
//    id "com.github.spotbugs" version "4.7.2"
    id 'java'
}

group 'org.trollheim.security'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}
java {
    sourceCompatibility = "17"
    targetCompatibility = "17"
}
dependencies {
//    spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.10.1'
    implementation('org.springframework.boot:spring-boot-starter-validation')
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation "org.springframework.security:spring-security-test"
    implementation 'org.flywaydb:flyway-core:9.5.1'
    implementation 'org.postgresql:postgresql'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation "org.testcontainers:junit-jupiter:1.17.5"
    testImplementation "org.testcontainers:postgresql:1.17.5"
    testImplementation 'org.junit.platform:junit-platform-commons:1.9.1'

}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}

bootJar.enabled = false
